@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.16 2012/03/22 23:12:41 asau Exp $
+$NetBSD: distinfo,v 1.17 2012/08/12 23:36:44 jdf Exp $
 
-SHA1 (fossil-src-20120317175325.tar.gz) = 02e9be3cf6b072dfd2c98fa7dd05a2df4a14cfb6
-RMD160 (fossil-src-20120317175325.tar.gz) = cc89c07f1ab859ee32cc5facaaa1e45954b69376
-Size (fossil-src-20120317175325.tar.gz) = 2759495 bytes
+SHA1 (fossil-src-20120808112557.tar.gz) = b7c3f0092ac9a00e71675464c0f3c7f0297df25f
+RMD160 (fossil-src-20120808112557.tar.gz) = c3a720f795a13f32c29b44f1ca2cf405ee65e829
+Size (fossil-src-20120808112557.tar.gz) = 2811716 bytes
